@@ -21,6 +21,28 @@
 </tr>
 </table>
 <p>
+2009-04-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/log.c (LogMagickEventList): Use MagickPackageName from
+        version.h rather than hard-coding "GraphicsMagick".
+
+</UL>
+<p>
+2009-04-18  Glenn Randers-Pehrson &lt;glennrp@simple....&gt;
+
+<UL>
+  <LI> coders/jpeg.c: Fixed a warning about "shadowed" variables.
+
+</UL>
+<p>
+2009-04-17  Glenn Randers-Pehrson &lt;glennrp@simple....&gt;
+
+<UL>
+  <LI> coders/png.c: Fixed some warnings about "shadowed" variables.
+
+</UL>
+<p>
 2009-04-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
