@@ -98,7 +98,7 @@ industry. It was used to perform 16-bit TIFF to DPX conversion for
 be <a class="reference" href="http://en.wikipedia.org/wiki/Christopher_Reeve">Christopher Reeve</a>'s most memorable work, the film's images turned
 out great, and the kids are sure to enjoy the film.</p>
 <p>The modern motion picture industry usually shoots on film and then uses a
-machine known as a <em>datacine</em> (e.g. <a class="reference" href="http://www.grassvalley.com/products/film/spirit_4k/">Spirit 4K DataCine</a> or Cintel DSX)
+machine known as a <em>datacine</em> (e.g. <a class="reference" href="http://www.dft-film.com/scanners/spirit_4k.php">Spirit 4K DataCine</a> or Cintel DSX)
 or a <em>scanner</em> (e.g. <a class="reference" href="http://www.filmlight.ltd.uk/">Northlight Scanner</a> or <a class="reference" href="http://www.lasergraphics.com/">Lasergraphics</a> Director) to
 convert each film image into an individual image file. An alternative to
 this is to use a high definition CCD camera such as the <a class="reference" href="http://www.grassvalley.com/products/cameras/viper/">Grass Valley
@@ -638,7 +638,7 @@ gm identify -format '%[dpx:*]' foo.dpx
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2009-03-26 21:43 UTC.
+Generated on: 2009-04-18 20:54 UTC.
 
 </div>
 </body>
