@@ -1,3 +1,8 @@
+2009-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/log.c (LogMagickEventList): Use MagickPackageName from
+	version.h rather than hard-coding "GraphicsMagick".
+
 2009-04-18  Glenn Randers-Pehrson <glennrp@simple....>
 
 	* coders/jpeg.c: Fixed a warning about "shadowed" variables.
